--- a/source/style/blocks/_main-screen.scss
+++ b/source/style/blocks/_main-screen.scss
@@ -1,5 +1,7 @@
 .main{
-	padding: 3.5rem 0 5.5rem;
+	padding: 3.5rem 0 5rem;
+	background: url(../images/hero-bg.png) no-repeat center 25%;
+	background-size: contain;
 	&__text{
 		font-size: 28px;
 		font-weight: $light;
@@ -12,5 +14,8 @@
 			display: inline-block;
 			width: 100%;
 		}
+	}
+	&__image{
+		max-width: 100%;
 	}
 }
