--- a/source/template/block/_header.pug
+++ b/source/template/block/_header.pug
@@ -3,27 +3,27 @@ section.header
 		.row
 			.col-12
 				.navbar.navbar-expand-lg.navbar-light
-					a(href='./index.html').navbar-brand
+					a(href='/index.html').navbar-brand.mx-auto
 						img.navbar-logo(src='templates/images/logo.svg' alt='logo')
-					button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarNav')
-						span.navbar-toggler-icon
+					//- button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarNav')
+					//- 	span.navbar-toggler-icon
 					.collapse.navbar-collapse#navbarNav
 						ul.navbar-nav.ml-auto
 							li.nav-item
-								a(href='#').nav-link Solution
+								a(href='#solution').nav-link Solution
 							li.nav-item
-								a(href='#').nav-link How it works?
+								a(href='#how-it-work').nav-link How it works?
 							li.nav-item
-								a(href='#').nav-link Technology
+								a(href='#technology').nav-link Technology
 							li.nav-item
-								a(href='#').nav-link Market
+								a(href='#market').nav-link Market
 							li.nav-item
-								a(href='#').nav-link Roadmap
+								a(href='#roadmap').nav-link Roadmap
 							li.nav-item
-								a(href='#').nav-link Team
+								a(href='#team').nav-link Team
 							li.nav-item
-								a(href='#').nav-link Partners
+								a(href='#partners').nav-link Partners
 							li.nav-item
 								a(href='#').nav-link Tokens
 							li.nav-item
-								a(href='#').nav-link Contact Us
+								a(href='#footer').nav-link Contact Us
