--- a/source/template/block/_how-it-work.pug
+++ b/source/template/block/_how-it-work.pug
@@ -1,29 +1,29 @@
-section.how-it-work
+section.how-it-work#how-it-work
 	.container
 		.row.how-it-work__header
 			.col-12.text-center
-				img(src='templates/images/arrow-down.svg' alt='arrow down').mb-3
-				h3.header-white.mb-0 How it works?
+				//- img(src='templates/images/arrow-down.svg' alt='arrow down').arrow-down
+				h3.header-white.mb-0.mt-3 How it works?
 		.row.how-it-work__block
-			.offset-1.col-lg-4
-				img(src='').how-it-work__image
+			.offset-lg-1.col-lg-4.text-center
+				img(src='templates/images/how-it-works-1.png').how-it-work__image.mb-3.mb-lg-0
 			.col-lg-6
-				p.how-it-work__text Insurance black box installed into client’s car. Blackbox detect accident dynamics and sends to Ubitel servers;
+				p.how-it-work__text.mb-0.text-center.text-lg-left Insurance black box installed into client’s car. Blackbox detect accident dynamics and sends to Ubitel servers;
 		.row.how-it-work__block
-			.offset-1.col-lg-4
-				img(src='').how-it-work__image
+			.offset-lg-1.col-lg-4.text-center
+				img(src='templates/images/how-it-works-2.png').how-it-work__image.mb-3.mb-lg-0
 			.col-lg-6
-				p.how-it-work__text Ubitel servers analyze accident and calculate compensation (in near to real time);
+				p.how-it-work__text.mb-0.text-center.text-lg-left Ubitel servers analyze accident and calculate compensation (in near to real time);
 		.row.how-it-work__block
-			.offset-1.col-lg-4
-				img(src='').how-it-work__image
+			.offset-lg-1.col-lg-4.text-center
+				img(src='templates/images/how-it-works-3.png').how-it-work__image.mb-3.mb-lg-0
 			.col-lg-6
-				p.how-it-work__text User get (to Mobile app) proposal to accept compensation (in near to real time);
+				p.how-it-work__text.mb-0.text-center.text-lg-left User get (to Mobile app) proposal to accept compensation (in near to real time);
 		.row.how-it-work__block
-			.offset-1.col-lg-4
-				img(src='').how-it-work__image
+			.offset-lg-1.col-lg-4.text-center
+				img(src='templates/images/how-it-works-4.png').how-it-work__image.mb-3.mb-lg-0
 			.col-lg-6
-				p.how-it-work__text User deliver car to authorised car repair center. If bill is higher, client upload bill in app and Ubitel pays difference in 24 hours;
+				p.how-it-work__text.mb-0.text-center.text-lg-left User deliver car to authorised car repair center. If bill is higher, client upload bill in app and Ubitel pays difference in 24 hours;
 	.container.border-top-dashed.mail-form
 		.row
 			.col-12.text-center
