--- a/source/template/block/_main-screen.pug
+++ b/source/template/block/_main-screen.pug
@@ -11,3 +11,15 @@ section.main
 					.form-group.mb-0
 						input.form-control.form-mail__input(type='email' placeholder='Enter your email address')
 					button.form-mail__button(type='submite') Stay updated
+			.col-lg-5.text-center
+				img(src='templates/images/ubitel-car.png').main__image.mt-4
+	.container.section__problem
+		.row
+			.offset-lg-1.col-lg-5.order-1.order-lg-0
+				.problem-image__wrapper.text-center.text-lg-left
+					img(src='templates/images/chart.svg').problem-image
+			.col-lg-6.order-0.order-lg-1
+				.section__descr.mb-5.mb-lg-0.text-center.text-lg-left
+					.header-blue Problem
+					p.text-purple Car insurance is too expensive. 
+						span Compensation of accidents is too difficult and takes too long to get payment.
