--- a/source/template/block/_partners.pug
+++ b/source/template/block/_partners.pug
@@ -1,16 +1,16 @@
-section.partners
+section.partners#partners
 	.container
 		.row
 			.col-12.text-center
 				h3.section__header.mb-5 Partners
 		.row
-			.col-lg-6
+			.col-md-6.mb-4.mb-md-0
 				.partner__item
 					img(src='templates/images/octo-img.jpg').partner__logo
 					.partner__text
 						p.partner__name.section__description.text-center The largest global telematics database
 						p.parnter__descr.mb-0.text-center We have created and continue to grow the world’s largest insurance telematics database. We have analyzed 186 billion miles of driving data and 438,000 crashes to support the delivery of our services.
-			.col-lg-6
+			.col-md-6
 				.partner__item
 					img(src='templates/images/teltonika-img.jpg').partner__logo
 					.partner__text
