--- a/source/template/block/_problem.pug
+++ b/source/template/block/_problem.pug
@@ -1,11 +1,11 @@
-section.problem
-	.container
-		.row
-			.offset-1.col-lg-5
-				.problem-image__wrapper
-					img(src='')
-			.col-lg-6
-				.section__descr
-					.header-blue Problem
-					p.text-purple Car insurance is too expensive. 
-						span Compensation of accidents is too difficult and takes too long to get payment.
+//- section.problem
+//- 	.container
+//- 		.row
+//- 			.offset-1.col-lg-5
+//- 				.problem-image__wrapper
+//- 					img(src='')
+//- 			.col-lg-6
+//- 				.section__descr
+//- 					.header-blue Problem
+//- 					p.text-purple Car insurance is too expensive. 
+//- 						span Compensation of accidents is too difficult and takes too long to get payment.
