--- a/source/template/block/_solution.pug
+++ b/source/template/block/_solution.pug
@@ -1,9 +1,10 @@
-section.solution
+section.solution#solution
 	.container
 		.row
 			.offset-lg-1.col-lg-5
-				.section__descr
+				.section__descr.mb-5.mb-lg-0.text-center.text-lg-left
 					.header-blue Solution
-					p.text-purple Lowest fares insurance company with guaranteed compensation in 24 hours after accident.
+					p.text-purple.mb-0 Lowest fares insurance company with guaranteed compensation in 24 hours after accident.
 			.offset-lg-1.col-lg-5
-				.solution-image__wrapper
+				.solution-image__wrapper.text-center.text-lg-left
+					img(src='templates/images/cars.jpg').solution-image
