--- a/source/template/block/_team.pug
+++ b/source/template/block/_team.pug
@@ -1,10 +1,10 @@
-section.team
+section.team#team
 	.container
 		.row
 			.col-12.text-center
 				h3.section__header.mb-5 Team
 			.col-12
-				ul.team__list
+				ul.team__list.d-flex.flex-wrap.justify-content-around
 					li.team__item.text-center
 						a.team__profile(href='#')
 							img(src='templates/images/icon-linkedin.svg')
