--- a/source/template/block/_why.pug
+++ b/source/template/block/_why.pug
@@ -1,11 +1,11 @@
 section.why
 	.container
 		.row
-			.col-lg-6
-				.why-image__wrapper
-					img(src='' alt='landscape')
-			.col-lg-6
-				.why__descr
+			.col-lg-6.order-1.order-lg-0
+				.why-image__wrapper.text-center.text-lg-left
+					img(src='templates/images/scycrapers.jpg' alt='').why-image.image-shadow
+			.col-lg-6.order-0.order-lg-1
+				.why__descr.mb-5.mb-lg-0
 					h3.header-purple--light.mb-4 Why Ubitel wins competition 
 						span against classic Car Insurance Companies?
 					ul.why__list
