--- a/source/style/blocks/_team.scss
+++ b/source/style/blocks/_team.scss
@@ -17,13 +17,15 @@
 		right: 20px;
 	}
 	&__list{
-		display: flex;
+		margin-left: -13px;
 	}
 	&__item{
 		position: relative;
-		margin-right: 13px;
+		margin-left: 13px;
+		margin-bottom: 13px;
 		padding: 3.5rem 1.25rem 3rem;
-		width: 20%;
+		width: 100%;
+		max-width: 220px;
 		background-color: $textColorWhite;
 		border-radius: 5px;
 		&:last-child{
