--- a/source/template/block/_footer.pug
+++ b/source/template/block/_footer.pug
@@ -1,11 +1,11 @@
-footer.footer
+footer.footer#footer
 	.container
-		.row
-			.col-lg-3
+		.row.text-center.text-md-left
+			.col-lg-3.col-md-6
 				a(href='/index.html').footer__link
-					img(src='templates/images/logo.svg').footer__logo
+					img(src='templates/images/logo.svg').footer__logo.mb-3.mb-lg-5
 				p.mb-0.footer-copyright © 2018 Ubitel. All Rights Reserved.
-			.offset-6.col-lg-3
+			.offset-lg-6.col-lg-3.col-md-6
 				p.footer__info.mb-0 Ubitel Technologies Ltd.
 				p.footer__info.mb-0 Registration ID: 25478963
 				p.footer__info.mb-0 81 Bury Rd., Halton West BD23 5EX
