--- a/source/template/block/_technology.pug
+++ b/source/template/block/_technology.pug
@@ -1,4 +1,4 @@
-section.technology
+section.technology#technology
 	.container
 		.row
 			.col-12
@@ -6,7 +6,7 @@ section.technology
 					h3.section__header Technology
 					p.section__description.mb-0 Blockchain + Insurance Telematics + Usage Based Insurance (UBI)
 		.row
-			.col-lg-7
+			.col-lg-7.mb-5.mb-lg-0
 				.technology__descr
 					p Blackbox. Telemetry device to detects car accident dynamics and sends to server; Data is encrypted and can be unlocked only with client’s acceptance. Client must deliver unique private digital key;
 					p Digital insurance platform: platform issue insurance contracts and pay compensations automatically; Constantly learn and become more accurate in paying compensation to clients;
@@ -41,5 +41,5 @@ section.technology
 							.technology__icon
 								img(src='templates/images/automated.svg')
 							p.technology__name.mb-0 Automated Emergency Assistance
-			.col-lg-5.text-right
+			.col-lg-5.text-lg-right.text-center
 				img(src='templates/images/chart-2.svg').technology__image
